--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Write your HTML in this file -->
+<a href="https://flatironschool.com" >Flatiron School</a>
+<!-- <h2><p>FLATIRON SCHOOL:</p></h2>
+<p>You Can contact us by:></p>
+
+<ul>
+  <li><a href="https://flatironschool.com/">Website</a></li>
+ <br>
+  <li><a href="info@flatironschool.com">Email</a></li>
+  <br>
+  <li><a href="1 (888) 958-0569">Phone</a></li>
+
+</ul> -->
